[package]
name = "idkit"
edition = "2021"
license = "MIT"
version = "0.1.0"
readme = "README.md"
authors = ["Miguel Piedrafita <rust@miguel.build>"]
repository = "https://github.com/worldcoin/idkit-rs"
description = "Rust toolkit to interact with the World ID protocol."


[dependencies]
url = "2.5.0"
ring = "0.17.7"
ruint = "1.11.1"
base64 = "0.21.7"
thiserror = "1.0.56"
tiny-keccak = "2.0.2"
serde_json = "1.0.111"
urlencoding = "2.1.3"
alloy-sol-types = "0.6.0"
serde = { version = "1.0.195", features = ["derive"] }
reqwest = { version = "0.11.23", features = ["json"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }

[dev-dependencies]
console = "0.15.8"
indicatif = "0.17.7"
qrcode = { version = "0.13.0", default-features = false }
tokio = { version = "1.35.1", features = ["macros", "rt", "rt-multi-thread"] }
