[package]
name = "idkit"
edition = "2021"
license = "MIT"
version = "0.1.2"
readme = "README.md"
authors = ["Miguel Piedrafita <rust@miguel.build>"]
repository = "https://github.com/worldcoin/idkit-rs"
description = "Rust toolkit to interact with the World ID protocol."


[dependencies]
url = "2.5.2"
ring = "0.17.8"
ruint = "1.11.1"
base64 = "0.21.7"
thiserror = "1.0.63"
tiny-keccak = "2.0.2"
serde_json = "1.0.127"
urlencoding = "2.1.3"
alloy-sol-types = "0.8.0"
serde = { version = "1.0.209", features = ["derive"] }
reqwest = { version = "0.12.7", features = ["json"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }

[dev-dependencies]
console = "0.15.8"
indicatif = "0.17.8"
qrcode = { version = "0.14.1", default-features = false }
tokio = { version = "1.39.3", features = ["macros", "rt", "rt-multi-thread"] }
